# GhostSNI

./: .gitignore  CMakeLists.txt  KULLANIM.txt  LICENSE  README.md  debug_test.cmd  ghost.rc  ghostsni_turkey.cmd  ghostsni_turkey_alt1.cmd  ghostsni_turkey_alt10.cmd  ghostsni_turkey_alt11.cmd  ghostsni_turkey_alt2.cmd  ghostsni_turkey_alt3.cmd  ghostsni_turkey_alt4.cmd  ghostsni_turkey_alt5.cmd  ghostsni_turkey_alt6.cmd  ghostsni_turkey_alt7.cmd  ghostsni_turkey_alt8.cmd  ghostsni_turkey_alt9.cmd  service_install.cmd  service_remove.cmd  test.cmd
include/: cli.h  injection.h  packet_parser.h  packet_utils.h  tray.h
licenses/: WinDivert.txt
scripts/: ghostsni_turkey_alt2.cmd  ghostsni_turkey_alt4.cmd  service_remove.cmd
src/: cli.c  injection.c  main.c  packet_parser.c  tray.c
